# YAK

./: .gitignore  Cargo.toml  README.md
.github/workflows/: book.yml
crates/private-emb/: Cargo.toml  README.md
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/embedding/: distance-preserving.md  private-embedding.md  vector-embedding.md
docs/src/introduction/: introduction.md
docs/src/pe/: autope-with-rag.md  autope.md  pe.md
docs/src/tutorial/: api.md
examples/: Cargo.toml
examples/rag/: Cargo.toml
examples/rag/src/: main.rs
examples/simple-client/: Cargo.toml
examples/simple-client/src/: main.rs
