[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.80"
repository = "https://github.com/YAKNetwork/YAK"
keywords = ["llm", "zkvm", "zero-knowledge", "ai", "agent"]
categories = ["cryptography", "ai"]

[workspace]
members = [
    "crates/private-emb",
    "examples/rag",
    "examples/simple-client",
]
resolver = "2"


[profile.release]
opt-level = 3
[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true


[workspace.dependencies]
rig-core = { git = "https://github.com/YAKNetwork/rig" }
rig-neo4j = { git = "https://github.com/YAKNetwork/rig" }


#[workspace.dev-dependencies]
anyhow = "1.0.75"
assert_fs = "1.1.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tokio-test = "0.4.4"
