[package]
name = "simple-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rig-core = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
